交接文档: 36-attach/01 完结(99/152,36 域 1/2);§二 表格+commit 清单 16 篇;§五 素材 15 个(新增 36-attach-trigger-demo.txt);§6.54 新经验(10 组漂移含 4 处编造: 启动建 socket/SIGQUIT 机制/协议格式/400 权限,触发双条件/信号二义/操作表/jcmd=DCmd);§八 待办 36-attach/02;§十 下一步